Fixed footer overlaps on small screen

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 html { height: 100% }
 body { 
 	height: 100%; 
+  min-height: 650px;
 	margin: 0; 
 	padding: 0; 
 	position: relative; 
